2005/04/04	muppetman

	* xs/GtkDnd.xs, t/GtkDnd.t: allow undef for the mask parameter
	to gtk_drag_set_icon_pixmap(), with tests.

2005/04/02	muppetman

	A examples/draw_text.pl
	M MANIFEST
	Add a new example.

2005/04/02	kaffeetisch

	* MANIFEST, maps-2.4, maps-2.6, maps_pango-1.8, xs_files-2.0,
	xs_files-2.6, gtk-demo/main.pl, gtk-demo/rotated_text.pl,
	t/GdkPango.t, t/PangoRenderer.t, xs/GdkPango.xs,
	xs/PangoRenderer.xs: Add initial bindings and tests for
	PangoRenderer and GtkPango.  Also add muppet's rotated text
	example.

2005/03/25	kaffeetisch

	* CodeGen.pm: Make the GEnum and GFlags converters cast their
	return values to the correct type to fix compilation when using a
	C++ compiler.

2005/03/07	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Stable release
	1.080.

2005/03/07	kaffeetisch

	* t/GtkFileChooser.t: Temporarily mark a failing test as TODO.

2005/02/28	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/28	kaffeetisch

	* t/GdkPixmap.t: Fix skip count for gtk+ versions older than 2.2.

2005/02/26	muppetman

	* xs/GtkNotebook.xs, t/GtkNotebook.t: The multiple definitions of
	some functions (in #if branches) confused the doc generation tools
	into creating multiple entries.  Folded the #if into the individual
	xsubs.  To make life easier for the caller, simply implement for
	ourselves the missing return values on older gtk+s.  Tests included.

	* xs/GdkPixmap.xs, t/GdkPixmap.t:  gdk_pixmap_create_from_xpm()
	returns NULL if the file is not found; catch this and return undef
	instead of crashing.  With a test.  Also allow undef and improve
	docs for a few parameters.

2005/02/26	kaffeetisch

	* t/GtkAccelGroup.t, t/GtkAccelMap.t, t/GtkStock.t: Mark tests as
	TODO that currently fail due to what appears to be a bug in
	Test::More.

	* t/PangoLayout.t: Test pango_layout_[sg]et_attributes.

2005/02/19 20:13 (+0100) pcg

	* xs/GdkProperty.xs: document data instead of length as result value.